# tech-exploration

stm32-projects/EXTI/: README.md  thirdLprjct.c
stm32-projects/Environment-Monitoring-System/: .cproject  .mxproject  README.md  STM32F411CEUX_FLASH.ld  lab6 Debug.launch  lab6.ioc
stm32-projects/Environment-Monitoring-System/BME280/: bme280.c  bme280.h
stm32-projects/Environment-Monitoring-System/Core/Inc/: LCDController.h  TouchController.h  main.h  stm32f4xx_it.h
stm32-projects/Environment-Monitoring-System/Core/Src/: LCDController.c  TouchController.c  main.c  rtcrealiz.c  rtcrealiz.h  stm32f4xx_it.c
stm32-projects/Environment-Monitoring-System/Debug/: lab6.elf  lab6.hex  makefile  objects.list  sources.mk
stm32-projects/Environment-Monitoring-System/Display/: display.c  display.h  fonts.c  fonts.h  ili9341.c  ili9341.h  st7789.c  st7789.h
stm32-projects/Environment-Monitoring-System/Drivers/: CMakeLists.txt  lv_conf.h
stm32-projects/Environment-Monitoring-System/Drivers/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_dateAndtimeSCR.c  ui_events.c  ui_events.h  ui_humidSCR.c  ui_main.c  ui_pressSCR.c  ui_tempSCR.c  ui_themes.c  ui_themes.h
stm32-projects/Environment-Monitoring-System/W25Qxx/: w25qxx.c  w25qxx.h
stm32-projects/Environment-Monitoring-System/XPT2046/: calibrate_touch.c  calibrate_touch.h  xpt2046.c  xpt2046.h
stm32-projects/PWM/: README.md  main.c  melody_2.c  melody_2.h  melody_4.c  melody_4.h  melody_8.c  melody_8.h  melody_9.c  melody_9.h
stm32-projects/USART/: README.md  fifthLprjct.c
(+729 files in other folders)
